--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,8 @@
             <a href="/servicios">Mis Servicios</a> 
             <a href="/horarios">Mi Horario</a> 
             <a href="/configuracion_publica">Calendario Publico</a>
+            <a href="/mensajes">Mis Mensajes</a>  
+            <a href="/campanas">Campañas</a>
             <a href="/logout">Cerrar Sesión</a>
         </div>
         
